navBar and footer ready

--- a/about.html
+++ b/about.html
@@ -1,11 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about</title>
-</head>
-<body>
-    <h1>About</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About - UESPL</title>
+
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- Navigation bar -->
+    <nav>
+      <a href="index.html"
+        ><img src="WEBSITE_CONTENT/UESPL.png" alt="UESPL Logo"
+      /></a>
+
+      <div class="a_navigation">
+        <ul>
+          <i id="a_menu-close" class="fas fa-times"></i>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <img id="a_menu-btn" src="WEBSITE_CONTENT/menu-btn.png" alt="Menu" />
+      </div>
+    </nav>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit consequatur
+      eveniet numquam esse, ullam, dolorum qui tempore rerum id repellendus enim
+      reiciendis alias ea quia, aliquid recusandae corrupti laboriosam debitis.
+      Rem natus mollitia recusandae odit nam facere vitae corrupti fugiat! Nisi
+      cumque, minima repellat dolorem rerum magnam aliquam voluptas tempora
+      delectus similique qui? Ex perferendis, inventore, amet optio nam
+      provident soluta accusantium architecto voluptatum repudiandae cupiditate,
+      aspernatur deleniti quod hic saepe nemo labore fugiat odio laborum atque
+      dolor alias minima repellat. In neque corporis ut dolores libero minima
+      quasi iste maiores illo! Necessitatibus atque in deserunt repellendus,
+      suscipit dolor ex non, consectetur voluptatum hic repudiandae quo vero
+      accusamus commodi nobis iste ratione natus ipsa odit nemo libero. Iure,
+      repudiandae facere natus odit sunt temporibus sequi, qui nulla laudantium
+      repellendus, dolore nihil eveniet? Facere deleniti libero quibusdam
+      officia soluta recusandae, quae in numquam minima optio quos ipsam ex
+      reprehenderit, earum non autem provident nobis ratione vero voluptate
+      magnam nemo delectus porro eveniet? Nulla debitis nostrum ratione rem
+      magnam. Officia perferendis consequuntur nam totam ad consectetur numquam
+      excepturi quo ducimus placeat optio veniam et soluta ab veritatis tenetur,
+      accusamus neque rem libero. Amet aperiam harum nemo ut iure labore
+      voluptas, illo ipsam perferendis impedit reiciendis vero iusto, quae
+      pariatur maiores distinctio? Rem distinctio ipsum vitae qui, numquam natus
+      magni ipsam. Minus libero explicabo perferendis, laborum quas itaque
+      reprehenderit doloribus vero distinctio corporis accusantium voluptatem
+      soluta ducimus rerum at illo obcaecati, esse quam saepe natus. Enim
+      placeat dolorum sunt mollitia adipisci minima, porro numquam quisquam
+      deleniti magnam aliquid hic praesentium facilis odio animi quam voluptate
+      sequi tempora! Ex recusandae, blanditiis possimus voluptatum sed
+      consectetur ipsum placeat obcaecati iste molestias nostrum voluptas,
+      laudantium quidem cumque! Necessitatibus officia perferendis similique
+      ratione sapiente assumenda! Sint ipsum error voluptatum iste harum animi
+      quod adipisci hic laborum velit ab voluptas beatae tempora ad quas, quasi
+      suscipit id, reiciendis asperiores quibusdam. Magni eum repudiandae, ipsum
+      beatae, ducimus quibusdam expedita similique perferendis dolorum
+      reprehenderit fugiat optio voluptatum doloremque minima quos itaque ad
+      eaque? Ab nobis quo itaque voluptate suscipit dolores cum asperiores
+      corporis assumenda reprehenderit voluptates quia illum, perspiciatis iste
+      enim neque illo blanditiis voluptatum ullam quidem veritatis
+      exercitationem. Consequatur fuga molestiae sint atque alias aperiam maxime
+      error neque quos, corporis quasi fugit fugiat mollitia libero eius commodi
+      aliquid beatae earum, recusandae facere. Explicabo facere corporis cumque
+      soluta. Delectus at vel velit consectetur tenetur aperiam dolorum
+      assumenda similique dolore blanditiis deleniti quis vitae, libero, tempora
+      minus repellendus laborum voluptates voluptatibus corrupti quam inventore,
+      placeat temporibus unde. Officiis temporibus ex iure animi sequi libero?
+      Ut facilis porro rerum ratione distinctio enim. Eius a quis ea itaque
+      quae. Aliquam facere distinctio earum ratione molestias laboriosam, iste
+      recusandae vitae animi natus quas quod repellendus excepturi in optio modi
+      nemo inventore beatae debitis, dolore cum eum dolores a. Laborum, mollitia
+      perspiciatis nam doloribus deleniti ad nesciunt repellendus beatae alias
+      perferendis accusantium omnis impedit assumenda at magnam amet atque
+      repudiandae voluptatem enim. Veniam quidem ullam omnis vitae voluptate
+      possimus accusamus facere adipisci natus, laboriosam similique numquam
+      veritatis perspiciatis doloremque culpa in exercitationem odio. Ratione,
+      culpa? Blanditiis ducimus maxime laudantium, odit molestias fuga inventore
+      neque eligendi mollitia facilis molestiae cupiditate atque consectetur
+      ipsam, quidem in sit. Deleniti fuga corporis quaerat ratione maxime
+      asperiores ipsam doloremque, expedita fugit ex quisquam ullam, quo
+      reprehenderit nesciunt amet perferendis consequuntur blanditiis. Soluta,
+      vitae. Quo corporis, quia delectus accusantium sequi, tempore, sunt
+      consectetur nihil minus esse nesciunt fugiat. Esse molestiae numquam
+      dolorum laborum praesentium necessitatibus facere sed magni ex doloremque
+      reiciendis quam fugiat nostrum quisquam sit et ut ipsa, omnis voluptatum
+      distinctio nisi tempora recusandae? Dolores non rerum inventore? Rem
+      pariatur, a sapiente nostrum fugit et? Quaerat nobis veniam voluptas
+      quibusdam culpa totam tenetur enim voluptate autem! Molestiae nesciunt ab
+      nam voluptate vitae iure debitis illo architecto, veritatis repellendus,
+      veniam, odio voluptatum illum numquam! Qui unde aspernatur praesentium
+      amet ipsam dolores iste inventore ducimus delectus dicta aliquam molestiae
+      dolorum voluptate nulla, accusamus sunt nam pariatur iusto doloremque
+      consequuntur. Quidem culpa soluta similique, minus esse modi veritatis
+      sunt exercitationem provident natus debitis fugiat nisi assumenda error
+      enim libero sapiente eos? Iste illo neque nesciunt consequatur perferendis
+      vero quas facilis reiciendis veritatis, quibusdam et adipisci pariatur
+      voluptatum minus eligendi ad doloribus, nobis voluptate. Non nobis, labore
+      veritatis repellat alias iusto sed facere quisquam nisi odit.
+      Exercitationem laboriosam dolor voluptates quibusdam quasi nulla, tempore
+      minus nemo nisi. Recusandae consectetur corporis voluptatum deserunt
+      nostrum minima voluptate quam. Laborum assumenda tenetur quibusdam,
+      reiciendis fugiat voluptas ratione molestiae harum culpa eveniet fuga
+      facere asperiores enim corrupti dolore dolorum quidem nam eos repellendus,
+      quasi earum a possimus soluta voluptatibus. Consequuntur nobis obcaecati
+      deleniti nemo accusamus unde nesciunt voluptas eveniet quo molestias. Ab
+      incidunt voluptatibus eius aliquid temporibus error aspernatur, officiis
+      quaerat impedit perferendis dolorum, in voluptatem blanditiis. Quaerat,
+      enim non! Ut saepe cumque amet repudiandae veniam dolores sunt accusantium
+      nulla aperiam autem atque labore, reiciendis in explicabo a quidem facere
+      aliquid unde. Consectetur, accusantium hic. Aspernatur eius impedit quis
+      iusto praesentium nemo minima quo, sit quibusdam ut omnis! Dicta error
+      quaerat quas sapiente maiores cumque, voluptatibus veniam optio nihil
+      explicabo ullam inventore. Explicabo dignissimos amet nisi accusantium
+      labore voluptatibus sapiente repellendus excepturi distinctio rerum! Odio
+      illo aspernatur eos. Sed excepturi suscipit provident natus quasi quos
+      magnam tempore, illum, a voluptates, adipisci deleniti. Modi dicta rem
+      doloremque quo. Dolor nulla explicabo dolores expedita dolorem cupiditate
+      velit laborum sunt. Porro quam qui amet eos a quia. Perferendis nulla cum
+      dicta quaerat architecto unde consectetur magnam ullam explicabo officia
+      beatae nostrum consequuntur expedita laudantium aliquid, nemo non quasi.
+      Reprehenderit voluptatibus nostrum distinctio rerum nobis iste, maxime
+      voluptate corrupti veritatis aperiam tempora excepturi veniam fugit, id
+      facere perferendis ipsa. Asperiores quasi doloremque quisquam aliquid
+      veritatis nam, ut, ea perspiciatis temporibus tenetur sed cupiditate
+      accusantium, rem deserunt dolore aut ipsa numquam maiores nisi quo velit
+      odit. Nobis aut ea, delectus amet quasi excepturi libero explicabo
+      repellat. Ad fugiat odio recusandae eum deleniti repellendus, possimus
+      reiciendis rerum dolor dolorem praesentium aspernatur, necessitatibus
+      asperiores eligendi odit debitis deserunt obcaecati sed harum expedita
+      reprehenderit quae. Voluptas?
+    </p>
+
+    <!-- footer section -->
+    <footer>
+      <div class="footer-col">
+        <h3>About Us</h3>
+        <p>USHA Engineering Services (P) Ltd.</p>
+        <p>is a consulting company established</p>
+        <p>and registered as USHA Engineering</p>
+        <p>services in October 02, 1991 to provide</p>
+        <p>high quality professional services.</p>
+      </div>
+
+      <div class="footer-col">
+        <h3>Contact Us</h3>
+        <li>+977-71-571632</li>
+        <li>+977-9857012648</li>
+        <li>+977-9857021648</li>
+        <li>info@uespl.com.np</li>
+        <li>uespl.org@gmail.com</li>
+      </div>
+      +
+      <div class="footer-col">
+        <h3>Quick Links</h3>
+        <a href="index.html"><li>Home</li></a>
+        <a href="about.html"><li>About us</li></a>
+        <a href="contact.html"><li>Contact us</li></a>
+        <a href="services.html"><li>Services</li></a>
+        <a href="projects.html"><li>Projects</li></a>
+      </div>
+
+      <div class="footer-col">
+        <h3>Our Services</h3>
+        <li>Architectural Design</li>
+        <li>Structural Design</li>
+        <li>Interior Design</li>
+        <li>Valuation</li>
+        <li>Retrofit Design</li>
+      </div>
+
+      <div class="footer-col">
+        <h3>More Services</h3>
+        <li>IEE And EIA Consultation</li>
+        <li>Soli and Material Testing</li>
+        <li>Vastu Consultation</li>
+        <li>Surveying</li>
+        <li>Site Supervision</li>
+      </div>
+
+      <div class="copyright">
+        <p class="rights">
+            &#169; USHA Engineering Services (P). Ltd. All rights Reserved
+          </p>
+        <div class="pro-links">
+          <a
+            href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
+            target="_blank"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/usha.engineering/?utm_source=ig_web_button_share_sheet"
+            target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://www.youtube.com/@uespl5056" target="_blank"
+            ><i class="fab fa-youtube"></i
+          ></a>
+        </div>
+
+        
+
+        <p class="developer">
+          Developed by:
+          <a href="https://siddharthapathak.com.np/" target="_blank"
+            >Siddhartha Pathak</a
+          >
+        </p>
+      </div>
+    </footer>
+
+    <!-- JAvaScript  -->
+    <script>
+      // about page nav responivie
+      $("#a_menu-btn").click(function () {
+        $("nav .a_navigation ul").addClass("active");
+      });
+      $("#a_menu-close").click(function () {
+        $("nav .a_navigation ul").removeClass("active");
+      });
+    </script>
+  </body>
 </html>
