--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About - UESPL</title>
 
+    <!-- ========= Favicon ========== -->
+    <link rel="icon" href="WEBSITE_CONTENT/UESPL.png" />
+    
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -197,8 +200,8 @@
 
       <div class="copyright">
         <p class="rights">
-            &#169; USHA Engineering Services (P). Ltd. All rights Reserved
-          </p>
+          &#169; USHA Engineering Services (P). Ltd. All rights Reserved
+        </p>
         <div class="pro-links">
           <a
             href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
@@ -214,8 +217,6 @@
             ><i class="fab fa-youtube"></i
           ></a>
         </div>
-
-        
 
         <p class="developer">
           Developed by:
