--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,10 @@
         <ul>
           <i id="a_menu-close" class="fas fa-times"></i>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a class="active" href="projects.html">Projects</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <img id="a_menu-btn" src="WEBSITE_CONTENT/menu-btn.png" alt="Menu" />
       </div>
