--- a/services.html
+++ b/services.html
@@ -31,16 +31,16 @@
         <ul>
           <i id="a_menu-close" class="fas fa-times"></i>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
         <img id="a_menu-btn" src="WEBSITE_CONTENT/menu-btn.png" alt="Menu" />
       </div>
     </nav>
 
-   <h1>Services</h1>
+    <h1>Services</h1>
 
     <!-- footer section -->
     <footer>
@@ -91,8 +91,8 @@
 
       <div class="copyright">
         <p class="rights">
-            &#169; USHA Engineering Services (P). Ltd. All rights Reserved
-          </p>
+          &#169; USHA Engineering Services (P). Ltd. All rights Reserved
+        </p>
         <div class="pro-links">
           <a
             href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
@@ -108,8 +108,6 @@
             ><i class="fab fa-youtube"></i
           ></a>
         </div>
-
-        
 
         <p class="developer">
           Developed by:
