--- a/about.html
+++ b/about.html
@@ -181,11 +181,12 @@
     <footer>
       <div class="footer-col">
         <h3>About Us</h3>
-        <p>USHA Engineering Services (P) Ltd.</p>
-        <p>is a consulting company established</p>
-        <p>and registered as USHA Engineering</p>
-        <p>services in October 02, 1991 to provide</p>
-        <p>high quality professional services.</p>
+        <p>USHA Engineering Services (P) Ltd. is a consulting company established </p>
+        <p>and registered as USHA Engineering services in October 02, 1991 to Provide</p>
+        <p>high quality professional services. This Organization was registered in the</p><p>Department of Industry, HMG/Nepal as per the private firm Registration</p><p>Act 2014 of  HMG/ Nepal with registration No.12860/048. Its head office was at</p><p>New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path, Bhairahawa,</p> <p>Nepal). It has been registered as Usha Engineering Services (P) Ltd. in the Office of</p><p>Company Registraron August 09, 2001 with Private Registration No.-16271/058-59.</p><p>Since then, it is rapidly growing as a notable consulting company in Nepal with</p><p>engagement in variousprofessional services..</p>
+          <!-- <span>
+            Lorem ipsum dolor sit amet consectetur adipisicing
+          </span> -->
       </div>
 
       <div class="footer-col">
@@ -228,6 +229,7 @@
         <p class="rights">
           &#169; USHA Engineering Services (P). Ltd. All rights Reserved
         </p>
+        
         <div class="pro-links">
           <a
             href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
