contact us ready

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
     <!-- ========= Favicon ========== -->
     <link rel="icon" href="WEBSITE_CONTENT/UESPL.png" />
-    
+
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -40,7 +40,101 @@
       </div>
     </nav>
 
-<h1>Contact</h1>
+    <!-- bg image -->
+    <section id="about-services">
+      <h2 class="name_h2">USHA Engineering Services (P). Ltd.</h2>
+      <h2 class="a_h2">Contact Us</h2>
+    </section>
+
+    <!-- //body section  -->
+    <section id="contact">
+      <div class="getin">
+        <h2>Get in touch</h2>
+        <p>Looking for help? Fill the form and start a new adventure.</p>
+
+        <div class="getin-details">
+          <h3>Office Loaction</h3>
+          <div>
+            <i class="fas fa-home get"></i>
+            <p>Sewa Path-05, Siddharthanaga, Rupandehi, Nepal</p>
+          </div>
+
+          <h3>Phone</h3>
+          <div>
+            <i class="fas fa-phone-alt get"></i>
+            <p>
+              +977-71-571632 <br />
+              +977-9857012648 <br />
+              +977-9857021648
+            </p>
+          </div>
+
+          <h3>Email</h3>
+          <div>
+            <i class="fas fa-envelope-open-text get"></i>
+            <p>
+              uespl.org@gmail.com <br />
+              info@uespl.com.np
+            </p>
+          </div>
+
+          <h3>Follow Us</h3>
+          <div class="pro-links">
+            <a
+              href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://www.instagram.com/usha.engineering/?utm_source=ig_web_button_share_sheet"
+              target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a href="https://www.youtube.com/@uespl5056" target="_blank"
+              ><i class="fab fa-youtube"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="form">
+        <h4>Let's Connect</h4>
+        <p>USHA Engineering Services (P). Ltd.</p>
+
+        <div class="form-row">
+          <input type="text" placeholder="Your Name" />
+          <input type="text" placeholder="Your Email" />
+        </div>
+
+        <div class="form-col">
+          <input type="text" placeholder="Subject" />
+        </div>
+
+        <div class="form-col">
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="8"
+            placeholder="How can we help?"
+          ></textarea>
+        </div>
+
+        <div class="form-col">
+          <button>Send Message</button>
+        </div>
+      </div>
+    </section>
+
+    <section id="map">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3538.832726056401!2d83.4532737!3d27.505577199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39969be0b379ceb7%3A0x9e21b1bbc4db8332!2sUsha%20engineering%20services%20(P)%20Ltd.!5e0!3m2!1sen!2snp!4v1720688124612!5m2!1sen!2snp"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </section>
 
     <!-- footer section -->
     <footer>
@@ -91,8 +185,8 @@
 
       <div class="copyright">
         <p class="rights">
-            &#169; USHA Engineering Services (P). Ltd. All rights Reserved
-          </p>
+          &#169; USHA Engineering Services (P). Ltd. All rights Reserved
+        </p>
         <div class="pro-links">
           <a
             href="https://www.facebook.com/people/USHA-Engineering-Services-Pvt-Ltd/100062410158912/"
@@ -108,8 +202,6 @@
             ><i class="fab fa-youtube"></i
           ></a>
         </div>
-
-        
 
         <p class="developer">
           Developed by:
