--- a/projects.html
+++ b/projects.html
@@ -39,17 +39,86 @@
         <img id="a_menu-btn" src="WEBSITE_CONTENT/menu-btn.png" alt="Menu" />
       </div>
     </nav>
-<h1>projects</h1>
+
+    <!-- bg image -->
+    <section id="about-projects">
+      <h2 class="name_h2">USHA Engineering Services (P). Ltd.</h2>
+      <h2 class="a_h2">Our Projects</h2>
+    </section>
+
+    <!-- /// body section  -->
+
+    <section class="portfolio" id="portfolio">
+      <div class="containter">
+        <div class="row">
+          <div class="section-title col-sm-12">
+            <h3>Our Projects</h3>
+          </div>
+          <br><br><br><br><br>
+          <div class="part col-sm-12">
+            <div class="portfolio-nav col-sm-12" id="filter-button">
+              <ul>
+                <li data-filter="*" class="current">
+                  <span>All Projects</span>
+                </li>
+                <li data-filter=".p_commercial" class="current">
+                  <span>Commercial</span>
+                </li>
+                <li data-filter=".p_hospital">
+                  <span>Hospital</span>
+                </li>
+                <li data-filter=".p_industrial">
+                  <span>Industrial</span>
+                </li>
+                <li data-filter=".p_religious">
+                  <span>Religious</span>
+                </li>
+                <li data-filter=".p_residential">
+                  <span>Residential</span>
+                </li>
+              </ul>
+            </div>
+
+            <div class="project-gallery col-sm-12" id="project-gallery" >
+              <div class="portfolioContainer row">
+                <div class="grid-item col-md-4 p_commercial">
+                  <figure>
+                    <img src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg" width="250px" alt="image">
+                    <figcaption class="fig-caption">
+                      <i class="fa fa-serch"></i>
+                      <h5 class="title">Suddhodhan</h5>
+                      <span class="sub-title">Banquet Hall</span>
+                    </figcaption>
+                  </figure>
+                </div>
+
+                <div class="grid-item col-md-4 p_commercial">
+                  <figure>
+                    <img src="WEBSITE_CONTENT/PROJECTS/COMMERCIAL/BANQUET HALL AT SUDDHODHAN.jpg" width="250px" alt="image">
+                    <figcaption class="fig-caption">
+                      <i class="fa fa-serch"></i>
+                      <h5 class="title">Suddhodhan</h5>
+                      <span class="sub-title">Banquet Hall</span>
+                    </figcaption>
+                  </figure>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </section>
 
     <!-- footer section -->
     <footer>
       <div class="footer-col">
         <h3>About Us</h3>
-        <p>USHA Engineering Services (P) Ltd.</p>
-        <p>is a consulting company established</p>
-        <p>and registered as USHA Engineering</p>
-        <p>services in October 02, 1991 to provide</p>
-        <p>high quality professional services.</p>
+        <p>USHA Engineering Services (P) Ltd. is a consulting company established </p>
+        <p>and registered as USHA Engineering services in October 02, 1991 to Provide</p>
+        <p>high quality professional services. This Organization was registered in the</p><p>Department of Industry, HMG/Nepal as per the private firm Registration</p><p>Act 2014 of  HMG/ Nepal with registration No.12860/048. Its head office was at</p><p>New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path, Bhairahawa,</p> <p>Nepal). It has been registered as Usha Engineering Services (P) Ltd. in the Office of</p><p>Company Registraron August 09, 2001 with Private Registration No.-16271/058-59.</p><p>Since then, it is rapidly growing as a notable consulting company in Nepal with</p><p>engagement in variousprofessional services..</p>
       </div>
 
       <div class="footer-col">
