--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - UESPL</title>
+    <title>Contact - UESPL</title>
 
     <!-- ========= Favicon ========== -->
     <link rel="icon" href="WEBSITE_CONTENT/UESPL.png" />
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- bg image -->
-    <section id="about-services">
+    <section id="about-contact">
       <h2 class="name_h2">USHA Engineering Services (P). Ltd.</h2>
       <h2 class="a_h2">Contact Us</h2>
     </section>
@@ -140,11 +140,9 @@
     <footer>
       <div class="footer-col">
         <h3>About Us</h3>
-        <p>USHA Engineering Services (P) Ltd.</p>
-        <p>is a consulting company established</p>
-        <p>and registered as USHA Engineering</p>
-        <p>services in October 02, 1991 to provide</p>
-        <p>high quality professional services.</p>
+        <p>USHA Engineering Services (P) Ltd. is a consulting company established </p>
+        <p>and registered as USHA Engineering services in October 02, 1991 to Provide</p>
+        <p>high quality professional services. This Organization was registered in the</p><p>Department of Industry, HMG/Nepal as per the private firm Registration</p><p>Act 2014 of  HMG/ Nepal with registration No.12860/048. Its head office was at</p><p>New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path, Bhairahawa,</p> <p>Nepal). It has been registered as Usha Engineering Services (P) Ltd. in the Office of</p><p>Company Registraron August 09, 2001 with Private Registration No.-16271/058-59.</p><p>Since then, it is rapidly growing as a notable consulting company in Nepal with</p><p>engagement in variousprofessional services..</p>
       </div>
 
       <div class="footer-col">
