--- a/index.html
+++ b/index.html
@@ -69,59 +69,59 @@
       ></video>
 
       <div class="content active">
-        <h1>First. <br /><span>Video</span></h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
-          dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
-          accusantium, soluta ea minima dicta vero temporibus laborum quam iste
-          eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p>
+        <h1>Residential <br /><span>Villa</span></h1>
+        <!-- <p>
+          Design of 10 bedded Primary Hospital at Labani, Suddhodhan Rural
+          Municipality, Kapilvastu, Nepal Site Area = 1-4-13 (B-K-D), Ground
+          Coverage: Primary Hospital Block = 1051.93 sq.m, Post-Mortem Block =
+          133.27 sq.m, Canteen Block = 230.95 sq.m, Generator Block = 21.60 sq.m,
+          Security Block = 6.00 sq.m, Total Built-up area = 1443.75 sq.m
+        </p> -->
         <a href="contact.html">Contact Now</a>
       </div>
 
       <div class="content">
-        <h1>second. <br /><span>video</span></h1>
-        <p>
+        <h1>Hanuman<br /><span>Mandir</span></h1>
+        <!-- <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
           accusantium, soluta ea minima dicta vero temporibus laborum quam iste
           eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p>
+        </p> -->
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="content">
-        <h1>Third. <br /><span>video</span></h1>
-        <p>
+        <h1>Residence <br /><span>Villa</span></h1>
+        <!-- <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
           accusantium, soluta ea minima dicta vero temporibus laborum quam iste
           eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p>
+        </p> -->
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="content">
-        <h1>Fourth. <br /><span>video</span></h1>
-        <p>
+        <h1>SRM <br /><span>Hospital </span></h1>
+        <!-- <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
           accusantium, soluta ea minima dicta vero temporibus laborum quam iste
           eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p>
+        </p> -->
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="content">
-        <h1>Fifth. <br /><span>video</span></h1>
-        <p>
+        <h1>Office <br /><span>Interior</span></h1>
+        <!-- <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
           consectetur adipisicing elit. Dolorem repudiandae eos eveniet ad
           accusantium, soluta ea minima dicta vero temporibus laborum quam iste
           eligendi cupiditate, optio quibusdam nesciunt necessitatibus sed.
-        </p>
+        </p> -->
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="media-icons">
