--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       ></video>
 
       <div class="content active">
-        <h1>Residential <br /><span>Villa</span></h1>
+        <h1>SRM  <br /><span>Hospital</span></h1>
         <!-- <p>
           Design of 10 bedded Primary Hospital at Labani, Suddhodhan Rural
           Municipality, Kapilvastu, Nepal Site Area = 1-4-13 (B-K-D), Ground
@@ -103,7 +103,7 @@
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="content">
-        <h1>SRM <br /><span>Hospital </span></h1>
+        <h1>Office<br /><span>Interior </span></h1>
         <!-- <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
@@ -114,7 +114,7 @@
         <a href="contact.html">Contact Now</a>
       </div>
       <div class="content">
-        <h1>Office <br /><span>Interior</span></h1>
+        <h1>Residence <br /><span>Villa</span></h1>
         <!-- <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi earum
           dolorem aliquid. Atque, quaerat beatae. Lorem ipsum dolor sit amet
