--- a/services.html
+++ b/services.html
@@ -40,6 +40,13 @@
       </div>
     </nav>
 
+    <!-- about page bg img  -->
+    <section id="about_services">
+      <h2 class="name_h2">USHA Engineering Services (P). Ltd.</h2>
+      <h2 class="a_h2">Our Services</h2>
+    </section>
+
+
     <h1>Services</h1>
 
     <!-- footer section -->
