--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
       <div class="containter">
         <div class="row">
           <div class="section-title col-sm-12">
-            <h3>Our Projects</h3>
+            <h3>Our Projects - - this screen is under maintenance</h3>
           </div>
           <br><br><br><br><br>
           <div class="part col-sm-12">
