Services page ready

--- a/services.html
+++ b/services.html
@@ -46,16 +46,136 @@
       <h2 class="a_h2">Our Services</h2>
     </section>
 
+    <!-- <h1>Services</h1> -->
 
-    <h1>Services -- this screen is under maintenance</h1>
+    <div class="container">
+      <div class="service-wrapper">
+        <div class="service">
+          <h1>Our Services</h1>
+          <div class="cards">
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Architectural Design</h2>
+              <p>
+                Providing innovative and sustainable architectural designs.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Structural Design</h2>
+              <p>
+                Delivering robust and efficient structural designs that ensure safety and durability.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Interior Design</h2>
+              <p>
+                Crafting elegant and functional interior spaces tailored to your lifestyle..
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Valuation</h2>
+              <p>
+                Offering precise and comprehensive property valuation services you can trust.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Retrofit Design</h2>
+              <p>
+                Specializing in retrofit designs to enhance and modernize existing structures.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>IEE And EIA Consultation</h2>
+              <p>
+                Providing expert IEE and EIA consultation for sustainable and compliant development.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Soil and Material Testing</h2>
+              <p>
+                Delivering accurate and reliable soil and material testing services for your projects.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Vastu Consultation</h2>
+              <p>
+                Offering Vastu consultation to harmonize your spaces with positive energy.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Surveying</h2>
+              <p>
+                Providing precise and comprehensive surveying services for all your project needs.
+              </p>
+            </div>
+
+            <div class="card">
+              <!-- <i class="fa-brands fa-chromecast"></i> -->
+              <h2>Site Supervision</h2>
+              <p>
+                Ensuring meticulous site supervision to guarantee project quality and compliance.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- footer section -->
     <footer>
       <div class="footer-col">
         <h3>About Us</h3>
-        <p>USHA Engineering Services (P) Ltd. is a consulting company established </p>
-        <p>and registered as USHA Engineering services in October 02, 1991 to Provide</p>
-        <p>high quality professional services. This Organization was registered in the</p><p>Department of Industry, HMG/Nepal as per the private firm Registration</p><p>Act 2014 of  HMG/ Nepal with registration No.12860/048. Its head office was at</p><p>New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path, Bhairahawa,</p> <p>Nepal). It has been registered as Usha Engineering Services (P) Ltd. in the Office of</p><p>Company Registraron August 09, 2001 with Private Registration No.-16271/058-59.</p><p>Since then, it is rapidly growing as a notable consulting company in Nepal with</p><p>engagement in variousprofessional services..</p>
+        <p>
+          USHA Engineering Services (P) Ltd. is a consulting company established
+        </p>
+        <p>
+          and registered as USHA Engineering services in October 02, 1991 to
+          Provide
+        </p>
+        <p>
+          high quality professional services. This Organization was registered
+          in the
+        </p>
+        <p>
+          Department of Industry, HMG/Nepal as per the private firm Registration
+        </p>
+        <p>
+          Act 2014 of HMG/ Nepal with registration No.12860/048. Its head office
+          was at
+        </p>
+        <p>
+          New Baneshwor, Kathmandu, Nepal (Presently shifted to Sewa Path,
+          Bhairahawa,
+        </p>
+        <p>
+          Nepal). It has been registered as Usha Engineering Services (P) Ltd.
+          in the Office of
+        </p>
+        <p>
+          Company Registraron August 09, 2001 with Private Registration
+          No.-16271/058-59.
+        </p>
+        <p>
+          Since then, it is rapidly growing as a notable consulting company in
+          Nepal with
+        </p>
+        <p>engagement in variousprofessional services..</p>
       </div>
 
       <div class="footer-col">
